<resources>
    <string name="app_name">Collections</string>
    <string name="collections">Collections</string>
    <string name="maps">Maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="start">START</string>

    <string name="arrayList">ArrayList</string>
    <string name="linkedList">LinkedList</string>
    <string name="copyOnWriteArrayList">CopyOnWriteArrayList</string>

    <string name="addingToStart">Adding to start in </string>
    <string name="addingToMiddle">Adding to middle in </string>
    <string name="addingToEnd">Adding to end in </string>

    <string name="searchIn">Search in </string>

    <string name="removeFromStart">Remove from start in </string>
    <string name="removeFromMiddle">Remove from middle in </string>
    <string name="removeFromEnd">Remove from end in </string>
    <string name="elements">Elements</string>
    <string name="threads">Threads</string>
    <string name="enter_elements_amount">Enter elements amount</string>
    <string name="enter_threads_amount">Enter threads amount</string>
    <string name="stop">STOP</string>
    <string name="ms">" ms"</string>
    <string name="hashMap">HashMap</string>
    <string name="treeMap">TreeMap</string>
    <string name="addingTo">Adding to</string>
    <string name="removeFrom">Removing from</string>
    <string name="searchInMap">Search in map</string>
    <string name="enter_valid_number">please enter valid number</string>
    <string name="empty">"0"</string>
    <string name="calculation_stopped">Calculation stopped</string>

</resources>
